Add three buttons for choices

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
+    <button class="btn">Rock</button>
+    <button class="btn">Paper</button>
+    <button class="btn">Scissors</button>
     <script src="./script.js"></script>
 </body>
 </html>
