--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
         <div class="playerside">
             <h2>Player</h2>
             <div class="buttons flex">
-                <button class="btn">Rock</button>
-                <button class="btn">Paper</button>
-                <button class="btn">Scissors</button>
+                <button id="rock-btn" class="btn">Rock</button>
+                <button id="paper-btn" class="btn">Paper</button>
+                <button id="scissors-btb" class="btn">Scissors</button>
             </div>
             <p id="player-score" class="score">Score:</p>
         </div>
