Add Event listener to buttons

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="buttons flex">
                 <button id="rock-btn" class="btn">Rock</button>
                 <button id="paper-btn" class="btn">Paper</button>
-                <button id="scissors-btb" class="btn">Scissors</button>
+                <button id="scissors-btn" class="btn">Scissors</button>
             </div>
             <p id="player-score" class="score">Score:</p>
         </div>
