Add output of results of round

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Rock Paper Scissors</h1>
-    <div class="flex">
+    <div  class="flex">
         <div class="playerside">
             <h2>Player</h2>
             <div class="buttons flex">
@@ -16,14 +16,15 @@
                 <button id="paper-btn" class="btn">Paper</button>
                 <button id="scissors-btn" class="btn">Scissors</button>
             </div>
-            <p id="player-score" class="score">Score:</p>
+            <p id="player-score" class="score">Score: 0</p>
         </div>
         <div class="playerside">
             <h2>Computer</h2>
             <div class="indentor"></div>
-            <p id="computer-score" class="score">Score:</p>
+            <p id="computer-score" class="score">Score: 0</p>
         </div>
     </div>
+    <div id="results-root"></div>
     <script src="./script.js"></script>
 </body>
 </html>
