Add images of choice

--- a/index.html
+++ b/index.html
@@ -17,11 +17,21 @@
                 <button id="scissors-btn" class="btn">Scissors</button>
             </div>
             <p id="player-score" class="score">Score: 0</p>
+            <div class="images">
+                <img src="images/rock.png" alt="" class="img" id="player-rock">
+                <img src="images/paper.png" alt="" class="img" id="player-paper">
+                <img src="images/scissors.png" alt="" class="img" id="player-scissors">
+            </div>
         </div>
         <div class="playerside">
             <h2>Computer</h2>
             <div class="indentor"></div>
             <p id="computer-score" class="score">Score: 0</p>
+            <div class="images">
+                <img src="images/rock.png" alt="" class="img" id="computer-rock">
+                <img src="images/paper.png" alt="" class="img" id="computer-paper">
+                <img src="images/scissors.png" alt="" class="img" id="computer-scissors">
+            </div>
         </div>
     </div>
     <div id="results-root"></div>
