--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <h1>Rock Paper Scissors</h1>
     <div  class="flex">
-        <div class="playerside">
+        <div id="player-part" class="playerside">
             <h2>Player</h2>
             <div class="buttons flex">
                 <button id="rock-btn" class="btn">Rock</button>
